--- a/asset/css/styles.css
+++ b/asset/css/styles.css
@@ -1,3 +1,103 @@
 body{
+    margin: 0;
     background-color: grey;
+    /* background: #00a5be; */
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+.logo{
+    margin: 0 auto 2em;
+    display: block;
+    width: 280px;
+}
+
+.navigation{
+    transform-origin: left bottom;
+    transform: rotate(-90deg) ;
+    position: absolute;
+    left: 4em;
+    width: 100vh;
+    bottom: 0;
+    text-align: center;
+    border: 1px solid red;
+}
+
+.dot{
+    width: 10px;
+    height: 10px;
+    background: black;
+    border-radius:  50%;
+    display: inline-flex;
+}
+
+.whapper{
+    max-width: 1280px;
+    margin: auto;
+    padding: 0 2cm;
+}
+.character-image{
+    width: 100%;
+    border-radius: 50%;
+    /* margin: 0 -2em; */
+   /* text-align: center; */
+}
+
+.character-name{
+    font-size: 30px;
+}
+.character-label{
+    background: #68512B;
+    padding:  1em;
+    color: white;
+    border-radius: 10px;
+    text-align: left;
+    font-size: 25px;
+    font-weight: 400;
+    /* display: inline-flex; */
+
+}
+
+@media screen and (min-width: 1024px){
+    .character-grid{
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        grid-template-areas: "name image" "labels image";
+    }
+
+    .character-image{
+        grid-row: name;
+        width: 300px;
+        border-radius: 50%;
+        /* margin: 0 -2em; */
+       /* text-align: center; */
+    }
+
+    .character-name{
+        text-align: left;
+    }
+    .character-name h2 {
+        font-size: 50px;
+        position: relative;
+        display: inline-flex;
+    }
+
+    .character-name h2:after{
+        content: "";
+        width: 87px;
+        height: 6px;
+        background-color: red;
+        display: inline-flex;
+        position: absolute;
+        left: calc(100% + 5px);
+        top: 50%;
+    }
+
+    .character-labels{
+        grid-area: labels;
+        max-width: 300px;
+    }
+
+    .character-image{
+        grid-area: image;
+    }
 }
